# nova-lang

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
check-no-panic/: Cargo.toml
check-no-panic/src/: main.rs
fuzz/: Cargo.toml
fuzz/corpus/basic/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt
fuzz/fuzz_targets/: basic.rs  reuse.rs
nova_macros/: Cargo.toml
nova_macros/src/: lib.rs
src/: lib.rs  tokenizer.rs
tests/: modules.rs
