[package]
name = "nova-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nova]
path = ".."


[[bin]]
name = "basic"
path = "fuzz_targets/basic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "reuse"
path = "fuzz_targets/reuse.rs"
test = false
doc = false
bench = false
